--- a/package.json
+++ b/package.json
@@ -11,10 +11,20 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "assert": "^2.1.0",
+    "axios": "^1.8.4",
+    "crypto-browserify": "^3.12.1",
+    "font-awesome": "^4.7.0",
+    "https-browserify": "^1.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.5.1",
     "react-scripts": "5.0.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "typescript": "^4.9.5",
+    "url": "^0.11.4",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
