--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "crypto-browserify": "^3.12.1",
     "font-awesome": "^4.7.0",
     "https-browserify": "^1.0.0",
+    "lucide-react": "^0.515.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.1",
